--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <script src="angular-ui-router.js"></script>
     <script src="movieapp.js"></script>
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
-
-
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
   </head>
   <body ng-app='movieApp'>
+    <div class="">
+      <h1>MovieDB search</h1>
+    </div>
 
     <ui-view></ui-view>
 
