--- a/search_result.html
+++ b/search_result.html
@@ -1,7 +1,15 @@
 
-  <div>
-    <ul ng-repeat="result in results">
-      <li>{{result.title}}</li>
-      <li>{{result.overview}}</li>
-    </ul>
-  </div>
+<div>
+  <button  class="myButton" ui-sref="search()" type="button" name="button">Now playing</button>
+</div>
+<div class="formContainer">
+  <form ng-submit="submit()" class="searchForm"  method="post">
+    <input ng-model='movieName' type="search" placeholder=" Search more movies" size='33'>
+  </form>
+</div>
+<div class="repeatIMG">
+    <div  ng-repeat="result in searchResults.results">
+      <div  > <a ui-sref="details({movieId: result.id})"><img height='300px' width='200px' ng-if="result.poster_path" ng-src="https://image.tmdb.org/t/p/w185{{result.poster_path}}" /> </a> </div>
+
+    </div>
+</div>
