--- a/search_page.html
+++ b/search_page.html
@@ -6,7 +6,10 @@
     </form>
   </div>
   <div class="nowPlaying">
-    <h2>Now Playing</h2>
+    <h2 class="mainTitle">Now Playing</h2>
+  </div>
+  <div>
+    <button ng-click="next()" type="button" name="button">Next</button>
   </div>
   <div class="repeatIMG">
       <div  ng-repeat="result in results">
