--- a/search_result.html
+++ b/search_result.html
@@ -3,9 +3,14 @@
   <button  class="myButton" ui-sref="search()" type="button" name="button">Now playing</button>
 </div>
 <div class="formContainer">
-  <form ng-submit="submit()" class="searchForm"  method="post">
+  <form ng-submit="submit()" class="searchForm" aria-hidden="true"  method="post">
     <input ng-model='movieName' type="search" placeholder=" Search more movies" size='33'>
+    <i class="fa fa-search" aria-hidden="true"></i>
+
   </form>
+</div>
+<div ng-show="">
+  <button ng-click="next()" type="button" name="button">Next</button>
 </div>
 <div class="repeatIMG">
     <div  ng-repeat="result in searchResults.results">
